fix(dashboard): decrease width of property label in config panel to stop overflow of delete button

--- a/packages/dashboard/src/customization/propertiesSections/propertiesAndAlarmsSettings/propertyComponent.css
+++ b/packages/dashboard/src/customization/propertiesSections/propertiesAndAlarmsSettings/propertyComponent.css
@@ -19,5 +19,5 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   font-weight: normal;
-  width: 355px;
+  width: 350px;
 }
